[gd_scene load_steps=24 format=3 uid="uid://c0v20mm8yi6ne"]

[ext_resource type="Texture2D" uid="uid://b111glyh2gy3" path="res://Back.png" id="1_3fsgk"]
[ext_resource type="Script" uid="uid://cfig8sugn1kcr" path="res://Funtionality.gd" id="1_qtmhy"]
[ext_resource type="Texture2D" uid="uid://cwvisqd04jajh" path="res://Cover.png" id="2_3s8em"]
[ext_resource type="Texture2D" uid="uid://2hcfik73pvk8" path="res://closeTapa.png" id="4_h7lgq"]
[ext_resource type="Texture2D" uid="uid://ojtxcoe1t7k0" path="res://TarjetaPEDAZO1.png" id="4_u0ygc"]
[ext_resource type="Texture2D" uid="uid://c2mdhei5b13fb" path="res://TarjetaPEDAZO2.png" id="5_7th4q"]
[ext_resource type="Texture2D" uid="uid://c8mqmg1ydqys0" path="res://C1.png" id="5_um60f"]
[ext_resource type="Texture2D" uid="uid://p37o78matcfk" path="res://TarjetaPEDAZO3.png" id="6_6jybn"]
[ext_resource type="Texture2D" uid="uid://k11aaiw45027" path="res://C2.png" id="6_tvvjf"]
[ext_resource type="Texture2D" uid="uid://d2gqkjvmksfik" path="res://TarjetaPEDAZO4.png" id="7_84odl"]
[ext_resource type="Texture2D" uid="uid://dw25o4thfoe5" path="res://C3.png" id="7_odbm5"]
[ext_resource type="Texture2D" uid="uid://bk2exj56jrlo2" path="res://C4.png" id="8_qqpgl"]
[ext_resource type="Texture2D" uid="uid://c6hdqs15hw83k" path="res://O1.png" id="9_ubvo4"]
[ext_resource type="Texture2D" uid="uid://b8suujbn4yffl" path="res://O2.png" id="10_xdd8k"]
[ext_resource type="Texture2D" uid="uid://cy784q7o5f14w" path="res://O3.png" id="11_w5evc"]
[ext_resource type="Texture2D" uid="uid://086d4nmd5ty6" path="res://O4.png" id="12_ghlol"]
[ext_resource type="Texture2D" uid="uid://jeue1xxougif" path="res://OpenTapa.png" id="13_mheae"]

[sub_resource type="LabelSettings" id="LabelSettings_h7lgq"]
font_size = 41

[sub_resource type="LabelSettings" id="LabelSettings_um60f"]
font_size = 41

[sub_resource type="LabelSettings" id="LabelSettings_tvvjf"]
font_size = 26

[sub_resource type="Animation" id="Animation_xmlya"]
resource_name = "OpenSobre"
length = 2.8
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("tapa1:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 1.55, 2.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, false, false, false, false, false, false, false, false, false, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("tapa2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 1.55, 2.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [false, true, false, false, false, false, false, false, false, false, false, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("tapa3:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.23, 0.25, 0.3, 0.35, 0.4, 0.45, 1.55, 2.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [false, false, true, false, false, false, false, false, false, false, false, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("tapa4:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 1.55, 2.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [false, false, false, true, false, false, false, false, false, false, false, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("tapa5:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 1.55, 2.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [false, false, false, false, true, false, false, false, false, false, false, false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("tapa6:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 1.55, 2.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [false, false, false, false, false, true, false, false, false, false, false, false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("tapa7:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 1.55, 2.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [false, false, false, false, false, false, true, false, false, false, false, false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("tapa8:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 1.55, 2.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [false, false, false, false, false, false, false, true, false, false, false, false]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("tapa9:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 1.55, 2.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [false, false, false, false, false, false, false, false, true, false, false, false]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("tapa10:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 1.55, 2.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [false, false, false, false, false, false, false, false, false, true, true, false]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Tarjeta:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0, 0.45, 2.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, true, true]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("Tarjeta:size")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0, 0.45, 1.5, 2.8),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(158.78516, 930.35645), Vector2(158.78516, 930.35645), Vector2(158.78516, 930.35645), Vector2(1080, 6327.953)]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("Tarjeta:rotation")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0, 0.45, 1.5, 2.8),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [-1.5707964, -1.5707964, 0.0, 0.0]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("Tarjeta:position")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0, 0.45, 0.6540731, 1.5, 2.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(79, 1184.7852), Vector2(79, 1184.7852), Vector2(89.509, 999.281), Vector2(460.18, 230.325), Vector2(0, 0)]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("Tarjeta/bgContador:visible")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(0, 2.7694814, 2.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, false, true]
}
tracks/15/type = "value"
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/path = NodePath("Cover:modulate")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/keys = {
"times": PackedFloat32Array(1.2, 1.54),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/16/type = "value"
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/path = NodePath("Fondo:modulate")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/keys = {
"times": PackedFloat32Array(1.2, 1.54),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/17/type = "value"
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/path = NodePath("tapa10:modulate")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/keys = {
"times": PackedFloat32Array(1.2, 1.5384406),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/18/type = "value"
tracks/18/imported = false
tracks/18/enabled = true
tracks/18/path = NodePath("Tarjeta/link2:visible")
tracks/18/interp = 1
tracks/18/loop_wrap = true
tracks/18/keys = {
"times": PackedFloat32Array(2.7678032, 2.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/19/type = "value"
tracks/19/imported = false
tracks/19/enabled = true
tracks/19/path = NodePath("Tarjeta/link1:visible")
tracks/19/interp = 1
tracks/19/loop_wrap = true
tracks/19/keys = {
"times": PackedFloat32Array(2.7678032, 2.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/20/type = "value"
tracks/20/imported = false
tracks/20/enabled = true
tracks/20/path = NodePath("Cover:visible")
tracks/20/interp = 1
tracks/20/loop_wrap = true
tracks/20/keys = {
"times": PackedFloat32Array(2.8),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/21/type = "value"
tracks/21/imported = false
tracks/21/enabled = true
tracks/21/path = NodePath("Fondo:visible")
tracks/21/interp = 1
tracks/21/loop_wrap = true
tracks/21/keys = {
"times": PackedFloat32Array(2.8),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_5nb6a"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("tapa1:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("tapa2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("tapa3:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("tapa4:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("tapa5:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("tapa6:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("tapa7:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("tapa8:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("tapa9:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("tapa10:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Tarjeta:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("Tarjeta:size")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1080, 6327.953)]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("Tarjeta:rotation")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("Tarjeta:position")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(79, 1184.7852)]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("Tarjeta/bgContador:visible")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/15/type = "value"
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/path = NodePath("Cover:modulate")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/16/type = "value"
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/path = NodePath("Fondo:modulate")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/17/type = "value"
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/path = NodePath("tapa10:modulate")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/18/type = "value"
tracks/18/imported = false
tracks/18/enabled = true
tracks/18/path = NodePath("Tarjeta/link2:visible")
tracks/18/interp = 1
tracks/18/loop_wrap = true
tracks/18/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/19/type = "value"
tracks/19/imported = false
tracks/19/enabled = true
tracks/19/path = NodePath("Tarjeta/link1:visible")
tracks/19/interp = 1
tracks/19/loop_wrap = true
tracks/19/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/20/type = "value"
tracks/20/imported = false
tracks/20/enabled = true
tracks/20/path = NodePath("Cover:visible")
tracks/20/interp = 1
tracks/20/loop_wrap = true
tracks/20/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/21/type = "value"
tracks/21/imported = false
tracks/21/enabled = true
tracks/21/path = NodePath("Fondo:visible")
tracks/21/interp = 1
tracks/21/loop_wrap = true
tracks/21/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8rxlu"]
_data = {
&"OpenSobre": SubResource("Animation_xmlya"),
&"RESET": SubResource("Animation_5nb6a")
}

[node name="MainScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qtmhy")

[node name="Bg" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.84321, 0.75547403, 0.75878495, 1)

[node name="Fondo" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -543.5
offset_top = -408.5
offset_right = 543.5
offset_bottom = 678.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_3fsgk")
expand_mode = 1

[node name="tapa10" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -544.5
offset_top = -758.5
offset_right = 542.5
offset_bottom = 328.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("13_mheae")
expand_mode = 1

[node name="Tarjeta" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -461.0
offset_top = 1184.7852
offset_right = 619.0
offset_bottom = 7512.7383
grow_horizontal = 2
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Tarjeta"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="TextureRect" type="TextureRect" parent="Tarjeta/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("4_u0ygc")
expand_mode = 1

[node name="TextureRect2" type="TextureRect" parent="Tarjeta/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("5_7th4q")
expand_mode = 1

[node name="TextureRect3" type="TextureRect" parent="Tarjeta/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("6_6jybn")
expand_mode = 1

[node name="TextureRect4" type="TextureRect" parent="Tarjeta/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("7_84odl")
expand_mode = 1

[node name="bgContador" type="ColorRect" parent="Tarjeta"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = 346.02344
offset_right = 295.0
offset_bottom = 516.02344
grow_horizontal = 2
grow_vertical = 2
color = Color(0.6901961, 0.3254902, 0.39607844, 1)

[node name="vCont" type="VBoxContainer" parent="Tarjeta/bgContador"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="dateCont" type="HBoxContainer" parent="Tarjeta/bgContador/vCont"]
layout_mode = 2
size_flags_vertical = 3

[node name="dias" type="Label" parent="Tarjeta/bgContador/vCont/dateCont"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
label_settings = SubResource("LabelSettings_h7lgq")
horizontal_alignment = 1
vertical_alignment = 1

[node name="dosPuntos" type="Label" parent="Tarjeta/bgContador/vCont/dateCont"]
layout_mode = 2
text = ":"
label_settings = SubResource("LabelSettings_um60f")

[node name="horas" type="Label" parent="Tarjeta/bgContador/vCont/dateCont"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
label_settings = SubResource("LabelSettings_h7lgq")
horizontal_alignment = 1
vertical_alignment = 1

[node name="dosPuntos2" type="Label" parent="Tarjeta/bgContador/vCont/dateCont"]
layout_mode = 2
text = ":"
label_settings = SubResource("LabelSettings_um60f")

[node name="mins" type="Label" parent="Tarjeta/bgContador/vCont/dateCont"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
label_settings = SubResource("LabelSettings_h7lgq")
horizontal_alignment = 1
vertical_alignment = 1

[node name="dosPuntos3" type="Label" parent="Tarjeta/bgContador/vCont/dateCont"]
layout_mode = 2
text = ":"
label_settings = SubResource("LabelSettings_um60f")

[node name="segs" type="Label" parent="Tarjeta/bgContador/vCont/dateCont"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
label_settings = SubResource("LabelSettings_h7lgq")
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelConts" type="HBoxContainer" parent="Tarjeta/bgContador/vCont"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.55

[node name="dataD" type="Label" parent="Tarjeta/bgContador/vCont/LabelConts"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "DÃ­as"
label_settings = SubResource("LabelSettings_tvvjf")
horizontal_alignment = 1

[node name="dataH" type="Label" parent="Tarjeta/bgContador/vCont/LabelConts"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Horas"
label_settings = SubResource("LabelSettings_tvvjf")
horizontal_alignment = 1

[node name="dataM" type="Label" parent="Tarjeta/bgContador/vCont/LabelConts"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Minutos"
label_settings = SubResource("LabelSettings_tvvjf")
horizontal_alignment = 1

[node name="dataS" type="Label" parent="Tarjeta/bgContador/vCont/LabelConts"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Segundos"
label_settings = SubResource("LabelSettings_tvvjf")
horizontal_alignment = 1

[node name="link1" type="Button" parent="Tarjeta"]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 428.0
offset_top = 4656.0
offset_right = 636.0
offset_bottom = 4723.0

[node name="link2" type="Button" parent="Tarjeta"]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 425.0
offset_top = 5531.0
offset_right = 633.0
offset_bottom = 5598.0

[node name="Cover" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -543.5
offset_top = -408.5
offset_right = 543.5
offset_bottom = 678.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_3s8em")
expand_mode = 1

[node name="tapa1" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -539.5
offset_top = -413.5
offset_right = 547.5
offset_bottom = 673.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_h7lgq")
expand_mode = 1

[node name="tapa2" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -543.5
offset_top = -408.5
offset_right = 543.5
offset_bottom = 678.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_um60f")
expand_mode = 1

[node name="tapa3" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -547.5
offset_top = -405.5
offset_right = 539.5
offset_bottom = 681.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_tvvjf")
expand_mode = 1

[node name="tapa4" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -540.5
offset_top = -379.5
offset_right = 546.5
offset_bottom = 707.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_odbm5")
expand_mode = 1

[node name="tapa5" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -543.5
offset_top = -372.5
offset_right = 543.5
offset_bottom = 714.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_qqpgl")
expand_mode = 1

[node name="tapa6" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -543.5
offset_top = -814.5
offset_right = 543.5
offset_bottom = 272.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("9_ubvo4")
expand_mode = 1

[node name="tapa7" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -546.5
offset_top = -761.5
offset_right = 540.5
offset_bottom = 325.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("10_xdd8k")
expand_mode = 1

[node name="tapa8" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -543.5
offset_top = -703.5
offset_right = 543.5
offset_bottom = 383.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("11_w5evc")
expand_mode = 1

[node name="tapa9" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -544.5
offset_top = -605.5
offset_right = 542.5
offset_bottom = 481.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("12_ghlol")
expand_mode = 1

[node name="OpenBt" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -472.0
offset_top = -97.0
offset_right = 478.0
offset_bottom = 517.0
grow_horizontal = 2
grow_vertical = 2

[node name="Anims" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_8rxlu")
}

[connection signal="pressed" from="Tarjeta/link1" to="." method="_on_link_1_pressed"]
[connection signal="pressed" from="Tarjeta/link2" to="." method="_on_link_2_pressed"]
[connection signal="pressed" from="OpenBt" to="." method="_on_open_bt_pressed"]
